--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,93 +1,26 @@
-# Copyright (c) Facebook, Inc. and its affiliates.
-# All rights reserved.
-#
-# This source code is licensed under the BSD-style license found in the
-# LICENSE file in the root directory of this source tree.
-
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-gpu: &gpu
-  machine:
-    image: ubuntu-2004-cuda-11.4:202110-01
-  resource_class: gpu.nvidia.medium
-
-commands:
-  ############################### Docker Commands ###############################
-  # Docker commands
-  authenticate_docker:
-    steps:
-      - run:
-          name: "Authenticate Docker"
-          command: |
-            if [ ! -z "$DOCKER_USERNAME" ]
-            then
-                sudo docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-            fi
-  install_nvidia_docker:
-    steps:
-      - run:
-          name: "Install NVIDIA Docker"
-          command: |
-            sudo apt-get install -y --no-install-recommends nvidia-docker2
-            sudo pkill -SIGHUP dockerd
-  start_nvidia_docker_and_copy_wav2letter_source:
-    steps:
-      - run:
-          name: "Start NVIDIA Docker and Copy Wav2Letter source"
-          command: |
-            sudo docker run --runtime=nvidia --rm -itd --ipc=host --name wav2letter flml/flashlight:cuda-base-latest
-            sudo docker exec -it wav2letter bash -c "mkdir /wav2letter"
-            sudo docker cp . wav2letter:/wav2letter
-  build_inside_nvidia_docker:
-     parameters:
-       version:
-         default: "3.10"
-         type: string
-       version_build:
-         default: "1"
-         type: string
-     steps:
-       - run:
-          name: "Build Wav2Letter inside of NVIDIA Docker"
-          command: |
-            sudo docker exec -it wav2letter bash -c "\
-            echo 'deb http://archive.ubuntu.com/ubuntu xenial main' | tee /etc/apt/sources.list.d/xenial.list && \
-            apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends software-properties-common && \
-            apt-add-repository -r universe && apt-add-repository 'deb http://dk.archive.ubuntu.com/ubuntu/ bionic main' && apt-add-repository 'deb http://dk.archive.ubuntu.com/ubuntu/ bionic universe' && apt-get update && \
-            DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends gcc-7 g++-7 && \
-            update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 7 &&\
-            update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 7 && \
-            wget https://cmake.org/files/v<< parameters.version >>/cmake-<< parameters.version >>.<< parameters.version_build >>-Linux-x86_64.sh && \
-            mkdir /opt/cmake && \
-            sh cmake-<< parameters.version >>.<< parameters.version_build >>-Linux-x86_64.sh --prefix=/opt/cmake --skip-license && \
-            ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake && \
-            git clone https://github.com/flashlight/flashlight.git --branch 0.3 && \
-            cd /flashlight && pwd && ls && mkdir -p build && cd build && \
-            export MKLROOT=/opt/intel/mkl && \
-            cmake .. -DFL_ARRAYFIRE_USE_CUDA=ON \
-              -DFL_BUILD_TESTS=OFF \
-              -DFL_BUILD_EXAMPLES=OFF \
-              -DFL_BUILD_ALL_LIBS=ON \
-              -DFL_BUILD_CORE=ON \
-              -DFL_BUILD_ALL_PKGS=ON \
-              -DFL_BUILD_PKG_VISION=OFF \
-              -DFL_BUILD_PKG_TEXT=OFF \
-              -DFL_BUILD_PKG_HALIDE=OFF && \
-            make -j$(nproc) && make install && \
-            cd /wav2letter && mkdir build && cd build && cmake .. && make -j$(nproc)"
-
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build-cuda:
-    <<: *gpu
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - authenticate_docker
-      - install_nvidia_docker
       - checkout
-      - start_nvidia_docker_and_copy_wav2letter_source
-      - build_inside_nvidia_docker
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
 
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  build_and_install:
+  say-hello-workflow:
     jobs:
-      - build-cuda
+      - say-hello
